# pi-peline

./: .observability-phase1-summary.md  .observability-state.md  AGENTS.md  Cargo.toml  IMPROVEMENTS.md  OBSERVABILITY_PLAN.md  README.md  ROADMAP.md  TESTING.md  TEST_STATUS.md
examples/: file-context-pipeline.yaml  pipeline.yaml  simple-pipeline.yaml  simple.yaml  smoke.yaml  test-pi.yaml
pipelines/: observability-implementation.yaml
scripts/: smoke_test.sh
src/: lib.rs  main.rs
src/agent/: client.rs  mod.rs  pi_events.rs  response.rs  streaming.rs  subprocess_client.rs
src/cli/: commands.rs  mod.rs  output.rs  terminal_output.rs
src/core/: condition.rs  config.rs  context.rs  mod.rs  pipeline.rs  state.rs  step.rs
src/execution/: engine.rs  executor.rs  mod.rs  scheduler.rs
src/persistence/: mod.rs  store.rs
tests/: PI_JSON_EVENTS_TDD_SUMMARY.md  helpers.rs  mock_agent.rs  mod.rs  pi_json_events_test_list.md  smoke_test.rs  streaming_integration_test.rs
tests/integration/: mod.rs
tests/scenarios/: failure_handling.rs  max_retries.rs  mod.rs  retry_behavior.rs  review_loop.rs  success_chain.rs  variable_substitution.rs
